--- a/tabs.jade
+++ b/tabs.jade
@@ -20,7 +20,7 @@ input.tv-radio#tv-tab-2(name='tv-group', type='radio')
 div.tv-content
   h1 Code
   p="Kind of verbose, here is the Jade source. Most JS libraries still ask for similar markup that's hardly any better, though."
-  p HTML (Jade) Code:
+  h3 HTML (Jade) Code:
   pre
     code
       | div.tv-tabs
@@ -32,7 +32,7 @@ div.tv-content
       | 
       | input.tv-radio#tv-tab-n(name='any-group-name', type='radio')
       | div.tv-content More goes here!
-  p Relevant CSS (Stylus) Code:
+  h3 Relevant CSS (Stylus) Code:
   pre
     code
       | .tv-content
