--- a/tabs.jade
+++ b/tabs.jade
@@ -39,7 +39,7 @@ div.tv-content
       |   display none
       | 
       | .tv-radio
-      |   // hide the radio here
+      |   display none
       | 
       |   &:checked + .tv-content
       |     display block
