--- a/tabs.styl
+++ b/tabs.styl
@@ -2,14 +2,7 @@
   display none
 
 .tv-radio
-  position absolute
-  overflow hidden
-  clip rect(0 0 0 0)
-  height 1px
-  width 1px
-  margin -1px
-  padding 0
-  border 0
+  display none
 
   &:checked + .tv-content
     display block
